# feishu-bot-codex-windows

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh  uninstall.ps1
.github/workflows/: ci.yml
commands/: bot-config.md  bot-list.md  bot-new.md  bot-remove.md  bot-start.md  bot-stop.md
docs/: install.md  phase-1-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase-5-summary.md  phase-6-summary.md  phase-7-smoke.md  phase-7-summary.md  phase-8-summary.md  phase-9-summary.md
feishu_bot_codex/: __init__.py  __main__.py  cli.py
feishu_bot_codex/config/: __init__.py  keychain.py
feishu_bot_codex/daemon/: __init__.py  auth.py  feishu.py  handlers.py  inbound.py  jsonl_watcher.py  menu.py  orchestrator.py  outbound.py  server.py  state.py  tmux.py
feishu_bot_codex/rendering/: __init__.py  tools.py  turn.py
feishu_bot_codex_win/: __init__.py  __main__.py  cli.py  menu_template.py  proto.py
feishu_bot_codex_win/config/: __init__.py  binding.py  keychain.py
feishu_bot_codex_win/daemon/: __init__.py  dispatcher.py  feishu.py  feishu_ws.py  handlers.py  inbound.py  jsonl_watcher.py  orchestrator.py  outbound.py  ratelimit.py  server.py  zellij.py
feishu_bot_codex_win/rendering/: card.py  mermaid.py  status.py  tools.py  turn.py  uploads.py
scripts/: feishu-bot-codex-shell  install-commands.sh  launchd.plist  systemd.service
tests/golden/: conftest.py  test_golden_cards.py
tests/integration/: test_cli_socket.py  test_daemon_entry.py  test_feishu_real.py  test_lifecycle.py  test_macos_keychain.py  test_tmux_real.py  (+1 more)
(+59 files in other folders)
