[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-bot-codex-win"
version = "0.1.0"
description = "Bridge local Codex CLI TUI to dedicated Feishu bots"
requires-python = ">=3.11"
dependencies = [
    "tomli-w >= 1.0.0",
    "click >= 8.1.0",
    "watchfiles >= 0.21.0",
]

[project.scripts]
feishu-bot-codex-win = "feishu_bot_codex_win.cli:main"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0.0",
    "pytest-asyncio >= 0.23.0",
    "pytest-cov >= 5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["feishu_bot_codex_win"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.coverage.run]
source = ["feishu_bot_codex_win"]
branch = true
